# zkvm-perf

./: .gitignore  Cargo.toml  eval-lita.sh  eval.sh  eval_lita.sh  install.sh  install_lita_toolchain.sh  nova.x  precompiles_jolt.txt  precompiles_nexus.txt  sweep.py  valida-shell
.cargo/: config.toml
eval/: Cargo.toml
eval/src/: jolt.rs  main.rs  nexus.rs  risc0.rs  sp1.rs  types.rs  utils.rs
programs/fibonacci/: Cargo.toml
programs/fibonacci-jolt/: Cargo.toml
programs/fibonacci-jolt/src/: lib.rs  main.rs
programs/fibonacci/src/: main.rs
programs/loop/: Cargo.toml
programs/loop-jolt/: Cargo.toml
programs/loop-jolt/src/: lib.rs  main.rs
programs/loop/src/: main.rs
programs/reth-lita/: Cargo.toml
programs/reth-lita/src/: main.rs
programs/reth-risc0/: Cargo.toml
programs/ssz-withdrawals/: Cargo.toml
programs/tendermint-jolt/: Cargo.toml
programs/tendermint-jolt/src/: lib.rs  main.rs
programs/tendermint-lita/: Cargo.toml
programs/tendermint-lita/src/: main.rs
programs/tendermint-risc0/: Cargo.toml
programs/tendermint-sp1/: Cargo.toml
reth-primitives/: Cargo.toml
reth-primitives/src/: db.rs  lib.rs  mpt.rs  processor.rs
