[workspace]
members = ["eval"]

resolver = "2"

[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
opt-level = 3
lto = true

[profile.fast]
inherits = "release"
debug = true
debug-assertions = true

[profile.release.build-override]
opt-level = 3

# [patch.crates-io]
# revm-interpreter = { git = "https://github.com/sp1-patches/revm-new", branch = "john/update-for-v1" }
# revm-primitives = { git = "https://github.com/sp1-patches/revm-new", branch = "john/update-for-v1" }
