[package]
name = "sp1-benchmarks-eval"
version = "0.1.0"
edition = "2021"

[build-dependencies]
vergen = { version = "8", default-features = false, features = [
  "build",
  "git",
  "git2",
] }

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
csv = "1.3.0"
serde = { version = "1.0.207", features = ["derive"] }
bincode = "1.3.3"
serde_json = "1.0"
chrono = "0.4.38"

# sp1
sp1-sdk = { version = "3.2.1", optional = true }
sp1-prover = { version = "3.2.1", optional = true }

# risc0
risc0-zkvm = { version = "1.1.3", default-features = false, features = [
  "prove",
], optional = true }

# sp1-reth
# sp1-reth-primitives = { git = "https://github.com/succinctlabs/sp1-reth.git", branch = "john/update-for-v1" }

# jolt
jolt-sdk = { git = "https://github.com/a16z/jolt", features = ["host"], optional = true }
fibonacci = { package = "fibonacci-jolt", path = "../programs/fibonacci-jolt", optional = true }

# nexus
nexus-sdk = { git = "https://github.com/nexus-xyz/nexus-zkvm.git", tag = "0.2.4", version = "0.2.4", optional = true }

[features]
default = []
cuda = ["sp1-sdk?/cuda", "risc0-zkvm?/cuda"]
risc0 = ["dep:risc0-zkvm"]
sp1 = ["dep:sp1-sdk", "dep:sp1-prover"]
jolt = ["dep:jolt-sdk", "dep:fibonacci"]
nexus = ["dep:nexus-sdk"]
