[workspace]
[package]
name = "fibonacci"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sp1-zkvm = "3.2.1"
risc0-zkvm = { version = "1.1.3", default-features = false, features = ["std"] }
serde = { version = "1.0.204", default-features = false, features = ["derive"] }
valida-rs = { git = "https://github.com/lita-xyz/valida-rs.git", rev ="a39c986", optional = true }

[features]
risc0 = []
sp1 = []
lita = ["dep:valida-rs"]
