[workspace]
[package]
name = "fibonacci"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sp1-zkvm = { version = "3.2.1", optional = true }
risc0-zkvm = { version = "1.1.3", default-features = false, features = ["std"], optional = true }
serde = { version = "1.0.204", default-features = false, features = ["derive"] }
valida-rs = { git = "https://github.com/lita-xyz/valida-rs.git", rev ="84df845", optional = true }

[features]
risc0 = ["dep:risc0-zkvm"]
sp1 = ["dep:sp1-zkvm"]
lita = ["dep:valida-rs"]
