[workspace]
[package]
name = "fibonacci"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sp1-zkvm = { version = "3.2.1", optional = true }
risc0-zkvm = { version = "1.2.0", default-features = false, features = ["std"], optional = true }
serde = { version = "1.0.204", default-features = false, features = ["derive"] }
valida-rs = { git = "https://github.com/lita-xyz/valida-rs.git", branch ="main", optional = true }
nexus-rt = { git = "https://github.com/nexus-xyz/nexus-zkvm.git", tag = "0.2.4", version = "0.2.4", optional = true }
postcard = { version = "1.0.10", default-features = false, features = ["alloc"], optional = true }

[features]
risc0 = ["dep:risc0-zkvm"]
sp1 = ["dep:sp1-zkvm"]
lita = ["dep:valida-rs"]
nexus = ["dep:nexus-rt", "dep:postcard"]
